--- a/toggler/index.html
+++ b/toggler/index.html
@@ -18,15 +18,11 @@
   </div>
 </div>
 <style data-title="Viewer">
-#state:checked ~ *[for="state"][data-for="state-0"],
-#state:checked ~ *[for="state"] *[data-for="state-0"],
-#state:checked ~ * *[for="state"][data-for="state-0"],
-#state:checked ~ * *[for="state"] *[data-for="state-0"],
+#state:checked~ [data-for="state-0"],
+#state:checked~* [data-for="state-0"],
 
-#state:not(:checked) ~ *[for="state"][data-for="state-1"],
-#state:not(:checked) ~ *[for="state"] *[data-for="state-1"],
-#state:not(:checked) ~ * *[for="state"][data-for="state-1"],
-#state:not(:checked) ~ * *[for="state"] *[data-for="state-1"] {
+#state:not(:checked)~ [data-for="state-1"],
+#state:not(:checked)~* [data-for="state-1"] {
   display: none;
 }
 </style>
